--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 PyMySQL==1.1.0
-python-dotenv==1.0.0
+python-dotenv
 python-jose==3.3.0
 python-multipart==0.0.6
 rsa==4.9
